# fp2022

OCaml-with-variants/: REPL.ml  dune  dune-project  repl.t
OCaml-with-variants/QCtest/: QCTests.ml  dune
OCaml-with-variants/demos/: code.txt  declAppl.ml  declAppl.t  demoAO.ml  demoNO.ml  demoParse.ml  dune  sfTests.t  simpleFuncs.ml
OCaml-with-variants/lib/: ast.mli  dune  infer.ml  inter.ml  parser.ml  parser.mli  repl.ml  tests.ml  utils.ml
