(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries Lambda.OCamli))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries Lambda.OCamli))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries Lambda.OCamli stdio))

(cram
 (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe ../REPL.exe))
