(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries OCaml-with-variants.OCamli))

(executable
 (name declAppl)
 (modules declAppl)
 (public_name declAppl)
 (libraries OCaml-with-variants.OCamli))

(executable
 (name simpleFuncs)
 (modules simpleFuncs)
 (public_name simpleFuncs)
 (libraries OCaml-with-variants.OCamli stdio))

(cram
 (deps ./declAppl.exe ./demoAO.exe ./simpleFuncs.exe ../REPL.exe))
